0.11/_sources/auto_tutorials/index.txt
Tutorials
=========

Introductory tutorials to MNE.

.. raw:: html

    <div class="sphx-glr-thumbContainer" tooltip="=============================================================== Non-parametric 1 sample cluster...">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_cluster_1samp_test_time_frequency_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_cluster_1samp_test_time_frequency.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_cluster_1samp_test_time_frequency

.. raw:: html

    <div class="sphx-glr-thumbContainer" tooltip="====================================================== Permutation t-test on toy data with spat...">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_cluster_methods_tutorial_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_cluster_methods_tutorial.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_cluster_methods_tutorial

.. raw:: html

    <div class="sphx-glr-thumbContainer" tooltip="================================================================= Permutation t-test on source ...">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_cluster_stats_spatio_temporal_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_cluster_stats_spatio_temporal.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_cluster_stats_spatio_temporal

.. raw:: html

    <div class="sphx-glr-thumbContainer" tooltip="========================================================================= 2 samples permutation...">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_cluster_stats_spatio_temporal_2samp_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_cluster_stats_spatio_temporal_2samp.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_cluster_stats_spatio_temporal_2samp

.. raw:: html

    <div class="sphx-glr-thumbContainer" tooltip="====================================================================== Repeated measures ANOVA ...">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_cluster_stats_spatio_temporal_repeated_measures_anova_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_cluster_stats_spatio_temporal_repeated_measures_anova.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_cluster_stats_spatio_temporal_repeated_measures_anova

.. raw:: html

    <div class="sphx-glr-thumbContainer" tooltip="========================================================================= Non-parametric betwee...">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_cluster_stats_time_frequency_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_cluster_stats_time_frequency.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_cluster_stats_time_frequency

.. raw:: html

    <div class="sphx-glr-thumbContainer" tooltip="==================================================================== Mass-univariate twoway rep...">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_cluster_stats_time_frequency_repeated_measures_anova_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_cluster_stats_time_frequency_repeated_measures_anova.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_cluster_stats_time_frequency_repeated_measures_anova

.. raw:: html

    <div class="sphx-glr-thumbContainer" tooltip="Creating MNE-Python's data structures from scratch ============================================...">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_creating_data_structures_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_creating_data_structures.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_creating_data_structures

.. raw:: html

    <div class="sphx-glr-thumbContainer" tooltip="The :class:`Epochs <mne.Epochs>` data structure: epoched data =================================...">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_epochs_objects_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_epochs_objects.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_epochs_objects

.. raw:: html

    <div class="sphx-glr-thumbContainer" tooltip="================================= Export epochs to Pandas DataFrame ===========================...">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_epochs_to_data_frame_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_epochs_to_data_frame.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_epochs_to_data_frame

.. raw:: html

    <div class="sphx-glr-thumbContainer" tooltip="Compute ICA on MEG data and remove artifacts ============================================">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_ica_from_raw_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_ica_from_raw.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_ica_from_raw

.. raw:: html

    <div class="sphx-glr-thumbContainer" tooltip="The :class:`Info <mne.io.meas_info.Info>` data structure ======================================...">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_info_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_info.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_info

.. raw:: html

    <div class="sphx-glr-thumbContainer" tooltip="Basic MEG and EEG data processing =================================">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_introduction_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_introduction.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_introduction

.. raw:: html

    <div class="sphx-glr-thumbContainer" tooltip="Modifying data in-place ======================= ">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_modifying_data_inplace_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_modifying_data_inplace.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_modifying_data_inplace

.. raw:: html

    <div class="sphx-glr-thumbContainer" tooltip="The :class:`Raw <mne.io.RawFIF>` data structure: continuous data ==============================...">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_raw_objects_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_raw_objects.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_raw_objects

.. raw:: html

    <div class="sphx-glr-thumbContainer" tooltip="Basics of source localization =============================">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_source_localization_basics_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_source_localization_basics.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_source_localization_basics

.. raw:: html

    <div class="sphx-glr-thumbContainer" tooltip="===================================================== Spatiotemporal permutation F-test on full...">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_spatio_temporal_cluster_stats_sensor_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_spatio_temporal_cluster_stats_sensor.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_spatio_temporal_cluster_stats_sensor
.. raw:: html

    <div style='clear:both'></div>

